--- a/DeepSick/index.html
+++ b/DeepSick/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="A digital memorial hall to honor and remember loved ones by sharing memories." />
+    <title>Digital Memorial Hall</title>
   </head>
   <body>
     <div id="root"></div>
