--- a/DeepSick/index.html
+++ b/DeepSick/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="description" content="A digital memorial hall to honor and remember loved ones by sharing memories." />
     <title>Digital Memorial Hall</title>
   </head>
